Fix mobile layout spacing

--- a/styles/components/layout.scss
+++ b/styles/components/layout.scss
@@ -1,7 +1,6 @@
-.layout {
+section.layout {
     overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
